Tests/Runtime2/Error/Call/CatchError.goal
CatchError
- set %caughtMessage% = %!error.Message%
